data/envoy.yaml
# Configuration is based on this example
# https://github.com/grpc/grpc-web/blob/952d0f5869b3/net/grpc/gateway/examples/helloworld/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    # Listener for local RNode 1
    - name: listener-local-p1
      address:
        # HTTP endpoint http://localhost:44401
        socket_address: { address: 0.0.0.0, port_value: 44401 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match: { prefix: '/' }
                          route:
                            cluster: local-cluster-p1
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin:
                          - '*'
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                #                        max_age: '1728000'
                #                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router

  clusters:
    # Local RNode 1
    - name: local-cluster-p1
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts:
        # Proxy to RNode gRPC endpoint
        - socket_address: { address: boot, port_value: 40401 }
